deployment.yml
# This file configures the $GKE_APP_NAME app which serves public web traffic on port 80
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $GKE_APP_NAME
spec:
  replicas: 2
  selector:
    matchLabels:
      app: $GKE_APP_NAME
  template:
    metadata:
      labels:
        app: $GKE_APP_NAME
    spec:
      containers:
      - name: $GKE_APP_NAME
        image: $GKE_REGION-docker.pkg.dev/$GKE_PROJECT/$GKE_PROJECT/$GKE_APP_NAME:$GKE_TAG
        ports:
        - containerPort: 80
