service.yml
apiVersion: v1
kind: Service
metadata:
  name: $GKE_SERVICE
  #labels:
  #  purpose: bsc-config-demo
  annotations:
    cloud.google.com/neg: '{"ingress": true, "exposed_ports": {"8080":{}}}' # Creates an NEG after an Ingress is created
    cloud.google.com/backend-config: '{"default": "my-backendconfig"}'
  #  cloud.google.com/backend-config: '{"ports": {"80":"my-backendconfig"}}'
  #  cloud.google.com/backend-config: '{"ports": {"8080":"my-backendconfig"}}'
  #  cloud.google.com/backend-config: '{"ports": {"8282":"my-backendconfig"}}'
  #  cloud.google.com/neg: '{"ingress": true}'  
spec:
  type: NodePort #LoadBalancer #ClusterIP 
  selector:
    app: $GKE_APP_NAME
    #purpose: $GKE_APP_NAME
  ports:
  - port: 80
    targetPort: 8080
    #protocol: TCP
