ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $GKE_INGRESS
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: $GKE_SERVICE
            port:
              number: 80
      - path: /demo-app/
        pathType: ImplementationSpecific
        backend:
          service:
            name: $GKE_SERVICE
            port:
              number: 8080
